--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.6.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-vue": "^8.2.0",
     "postcss": "^8.4.5",
     "sass": "^1.47.0",
     "tailwindcss": "^3.0.12",
